chore(app): refactor needed things

--- a/src/app/containers/dashboard/dashboard.component.html
+++ b/src/app/containers/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <qv-main-nav>
   <div fxLayout="column" fxLayoutGap="20px">
-    <qv-add-vote></qv-add-vote>
+    <!--<qv-add-vote></qv-add-vote>-->
     <!--<mat-grid-list cols="4" rowHeight="">-->
     <!--<mat-grid-tile-->
     <!--*ngFor="let tile of tiles"-->
