feat(auth): auth flow and error handling

--- a/src/app/components/info-snackbar/info-snackbar.component.html
+++ b/src/app/components/info-snackbar/info-snackbar.component.html
@@ -1,4 +1,9 @@
-<p>
-  {{ message }}
-</p>
-<button mat-button (click)="caller()">{{ action }}</button>
+<div fxLayout>
+  <p>{{ message }}</p>
+  <button mat-button (click)="caller()">{{ action }}</button>
+</div>
+<mat-progress-bar
+  [value]="curCount | async"
+  mode="determinate"
+  *ngIf="duration > 0"
+></mat-progress-bar>
