--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -11,7 +11,7 @@
             type="text"
             matInput
             placeholder="User Name"
-            formControlName="username"
+            formControlName="login_id"
             [value]="'rusakov'"
           />
         </mat-form-field>
@@ -66,7 +66,7 @@
         type="text"
         matInput
         placeholder="User Name"
-        formControlName="username"
+        formControlName="login_id"
         [value]="'rusakov'"
       />
     </mat-form-field>
